--- a/notebooks/topics.ipynb
+++ b/notebooks/topics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "659d1a13",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "8531246b",
    "metadata": {},
    "outputs": [
@@ -58,11 +58,11 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>-1</td>\n",
-       "      <td>Love</td>\n",
-       "      <td>647</td>\n",
-       "      <td>love routine skin products night video asmr fe...</td>\n",
+       "      <td>Love products</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>skin love products girl asmr care cerave skinc...</td>\n",
        "      <td>['Love that headband girl! Love a good skin ca...</td>\n",
-       "      <td>love</td>\n",
+       "      <td>love products</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -70,166 +70,246 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
-       "      <td>acne scars</td>\n",
-       "      <td>64</td>\n",
-       "      <td>acne skin prone acne prone pimples fungal acne...</td>\n",
-       "      <td>['Your skin looks amazing ✨✨✨ what would you r...</td>\n",
-       "      <td>acne scars</td>\n",
-       "      <td>0.625000</td>\n",
-       "      <td>0.171875</td>\n",
-       "      <td>0.203125</td>\n",
+       "      <td>Happy time</td>\n",
+       "      <td>104</td>\n",
+       "      <td>life love god happy time sofia watching jesus ...</td>\n",
+       "      <td>['I can’t find your video… where you are feeli...</td>\n",
+       "      <td>happy time</td>\n",
+       "      <td>0.346154</td>\n",
+       "      <td>0.173077</td>\n",
+       "      <td>0.480769</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>Hair</td>\n",
-       "      <td>48</td>\n",
-       "      <td>hair spray setting clean morning sweating scen...</td>\n",
-       "      <td>['I find it blissful for showering in the even...</td>\n",
-       "      <td>hair</td>\n",
-       "      <td>0.458333</td>\n",
-       "      <td>0.187500</td>\n",
-       "      <td>0.354167</td>\n",
+       "      <td>Acne scars</td>\n",
+       "      <td>62</td>\n",
+       "      <td>acne scars acne prone prone pimples acne prone...</td>\n",
+       "      <td>['miss, Illa, can you recommend a good routine...</td>\n",
+       "      <td>acne scars</td>\n",
+       "      <td>0.612903</td>\n",
+       "      <td>0.209677</td>\n",
+       "      <td>0.177419</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>Wearing makeup</td>\n",
-       "      <td>41</td>\n",
-       "      <td>makeup rhode concealer wearing foundation girl...</td>\n",
-       "      <td>['I have re-fallen in love with the beauty ind...</td>\n",
-       "      <td>wearing makeup</td>\n",
-       "      <td>0.341463</td>\n",
-       "      <td>0.170732</td>\n",
-       "      <td>0.487805</td>\n",
+       "      <td>- - - - - - - - - -</td>\n",
+       "      <td>53</td>\n",
+       "      <td>ich die das nicht und ist mit den auch wie</td>\n",
+       "      <td>['ich weiß du hast nicht gefragt, aber würde d...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.226415</td>\n",
+       "      <td>0.339623</td>\n",
+       "      <td>0.433962</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>7</td>\n",
-       "      <td>Sunscreen</td>\n",
-       "      <td>38</td>\n",
-       "      <td>sunscreen milky toner milky spf toner byoma su...</td>\n",
-       "      <td>['Is it just me or the beauty of joseon sunscr...</td>\n",
-       "      <td>sunscreen</td>\n",
-       "      <td>0.342105</td>\n",
-       "      <td>0.289474</td>\n",
-       "      <td>0.368421</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Cavemen</td>\n",
+       "      <td>34</td>\n",
+       "      <td>cavemen water washing morning wash girl mornin...</td>\n",
+       "      <td>[\"the craziest part to me is like. cavemen had...</td>\n",
+       "      <td>cavemen</td>\n",
+       "      <td>0.588235</td>\n",
+       "      <td>0.235294</td>\n",
+       "      <td>0.176471</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>9</td>\n",
-       "      <td>Love</td>\n",
-       "      <td>30</td>\n",
-       "      <td>ich die und das den auch für mit liebe mir</td>\n",
-       "      <td>['Woher bekomme ich das sogar diese größere se...</td>\n",
-       "      <td>love</td>\n",
-       "      <td>0.266667</td>\n",
-       "      <td>0.233333</td>\n",
-       "      <td>0.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>12</td>\n",
-       "      <td>Double cleansing</td>\n",
-       "      <td>22</td>\n",
-       "      <td>cleanser oil double cleansing oil cleanser cle...</td>\n",
-       "      <td>['Toleriane Purifying Foaming Cleanser every s...</td>\n",
-       "      <td>double cleansing</td>\n",
-       "      <td>0.181818</td>\n",
-       "      <td>0.227273</td>\n",
-       "      <td>0.590909</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
        "      <td>13</td>\n",
-       "      <td>Korean skincare</td>\n",
-       "      <td>22</td>\n",
-       "      <td>korean korean skincare skincare korea skin bub...</td>\n",
-       "      <td>['The face shop is my fave Korean skincare bra...</td>\n",
-       "      <td>korean skincare</td>\n",
-       "      <td>0.136364</td>\n",
-       "      <td>0.227273</td>\n",
+       "      <td>Footballers</td>\n",
+       "      <td>33</td>\n",
+       "      <td>song jose diego funny david lorenzo arab bruno...</td>\n",
+       "      <td>['Hey pookie I just made a edit of you I was a...</td>\n",
+       "      <td>footballers</td>\n",
+       "      <td>0.181818</td>\n",
+       "      <td>0.181818</td>\n",
        "      <td>0.636364</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>6</th>\n",
        "      <td>14</td>\n",
-       "      <td>Cavemen</td>\n",
-       "      <td>21</td>\n",
-       "      <td>water cavemen girl pollution realised jst gros...</td>\n",
-       "      <td>['Yall i swear cavemen probably also did wash ...</td>\n",
-       "      <td>cavemen</td>\n",
-       "      <td>0.428571</td>\n",
-       "      <td>0.428571</td>\n",
-       "      <td>0.142857</td>\n",
+       "      <td>Mask</td>\n",
+       "      <td>34</td>\n",
+       "      <td>mask clay clay mask sorlest rage masks led mas...</td>\n",
+       "      <td>['YOU SHOULD DO HALF UR FACE IN THE DUPES AND ...</td>\n",
+       "      <td>mask</td>\n",
+       "      <td>0.294118</td>\n",
+       "      <td>0.264706</td>\n",
+       "      <td>0.441176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>16</td>\n",
+       "      <td>Retinol</td>\n",
+       "      <td>29</td>\n",
+       "      <td>retinol tretinoin week acid tret retinal glyco...</td>\n",
+       "      <td>['Personally I wouldn’t use a retinol cream ev...</td>\n",
+       "      <td>retinol</td>\n",
+       "      <td>0.379310</td>\n",
+       "      <td>0.448276</td>\n",
+       "      <td>0.172414</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>17</td>\n",
+       "      <td>Morning routine</td>\n",
+       "      <td>29</td>\n",
+       "      <td>sleep morning smell morning routine routine sl...</td>\n",
+       "      <td>['We’re so happy Calmagnesio is part of your b...</td>\n",
+       "      <td>morning routine</td>\n",
+       "      <td>0.517241</td>\n",
+       "      <td>0.137931</td>\n",
+       "      <td>0.344828</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>15</td>\n",
-       "      <td>happy mother day</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Social media</td>\n",
+       "      <td>29</td>\n",
+       "      <td>comments followers ads moots tiktok follow 250...</td>\n",
+       "      <td>[\"you guys in the comments complaing in the co...</td>\n",
+       "      <td>social media</td>\n",
+       "      <td>0.310345</td>\n",
+       "      <td>0.241379</td>\n",
+       "      <td>0.448276</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>19</td>\n",
+       "      <td>pores</td>\n",
+       "      <td>28</td>\n",
+       "      <td>pores pore botox pads wrinkles products forehe...</td>\n",
+       "      <td>['This pore-minimizing routine looks so effect...</td>\n",
+       "      <td>pores</td>\n",
+       "      <td>0.428571</td>\n",
+       "      <td>0.285714</td>\n",
+       "      <td>0.285714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>21</td>\n",
+       "      <td>Vitamin C</td>\n",
+       "      <td>27</td>\n",
+       "      <td>naturium dark serum oil vitamin butter night s...</td>\n",
+       "      <td>['Hey Doc , is alpha arbutin serum and tranxam...</td>\n",
+       "      <td>vitamin c</td>\n",
+       "      <td>0.259259</td>\n",
+       "      <td>0.518519</td>\n",
+       "      <td>0.222222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>22</td>\n",
+       "      <td>Fungal acne</td>\n",
+       "      <td>25</td>\n",
+       "      <td>fungal fungal acne acne acne safe fungal acne ...</td>\n",
+       "      <td>['Is the medicube collagen mask fungal acne sa...</td>\n",
+       "      <td>fungal acne</td>\n",
+       "      <td>0.440000</td>\n",
+       "      <td>0.280000</td>\n",
+       "      <td>0.280000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>23</td>\n",
+       "      <td>Anua azelaic acid serum</td>\n",
+       "      <td>23</td>\n",
+       "      <td>anua azelaic acid azelaic acid serum anua azel...</td>\n",
+       "      <td>['I’ve been following ur vids for a while, jus...</td>\n",
+       "      <td>anua azelaic acid serum</td>\n",
+       "      <td>0.130435</td>\n",
+       "      <td>0.391304</td>\n",
+       "      <td>0.478261</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>24</td>\n",
+       "      <td>Milky Toner</td>\n",
        "      <td>20</td>\n",
-       "      <td>mom parents happy mother mother day pope chy r...</td>\n",
-       "      <td>[\"I always like to know how things smell. But ...</td>\n",
-       "      <td>happy mother day</td>\n",
+       "      <td>milky milky toner toner byoma milky toner byom...</td>\n",
+       "      <td>['I love the byoma milky toner and my prequel ...</td>\n",
+       "      <td>milky toner</td>\n",
        "      <td>0.350000</td>\n",
-       "      <td>0.200000</td>\n",
-       "      <td>0.450000</td>\n",
+       "      <td>0.250000</td>\n",
+       "      <td>0.400000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Topic              Name  Count  \\\n",
-       "0     -1              Love    647   \n",
-       "1      0        acne scars     64   \n",
-       "2      2              Hair     48   \n",
-       "3      4    Wearing makeup     41   \n",
-       "4      7         Sunscreen     38   \n",
-       "5      9              Love     30   \n",
-       "6     12  Double cleansing     22   \n",
-       "7     13   Korean skincare     22   \n",
-       "8     14           Cavemen     21   \n",
-       "9     15  happy mother day     20   \n",
+       "    Topic                     Name  Count  \\\n",
+       "0      -1            Love products   1000   \n",
+       "1       0               Happy time    104   \n",
+       "2       2               Acne scars     62   \n",
+       "3       4      - - - - - - - - - -     53   \n",
+       "4      12                  Cavemen     34   \n",
+       "5      13              Footballers     33   \n",
+       "6      14                     Mask     34   \n",
+       "7      16                  Retinol     29   \n",
+       "8      17          Morning routine     29   \n",
+       "9      18             Social media     29   \n",
+       "10     19                    pores     28   \n",
+       "11     21                Vitamin C     27   \n",
+       "12     22              Fungal acne     25   \n",
+       "13     23  Anua azelaic acid serum     23   \n",
+       "14     24              Milky Toner     20   \n",
        "\n",
-       "                                            Keywords  \\\n",
-       "0  love routine skin products night video asmr fe...   \n",
-       "1  acne skin prone acne prone pimples fungal acne...   \n",
-       "2  hair spray setting clean morning sweating scen...   \n",
-       "3  makeup rhode concealer wearing foundation girl...   \n",
-       "4  sunscreen milky toner milky spf toner byoma su...   \n",
-       "5         ich die und das den auch für mit liebe mir   \n",
-       "6  cleanser oil double cleansing oil cleanser cle...   \n",
-       "7  korean korean skincare skincare korea skin bub...   \n",
-       "8  water cavemen girl pollution realised jst gros...   \n",
-       "9  mom parents happy mother mother day pope chy r...   \n",
+       "                                             Keywords  \\\n",
+       "0   skin love products girl asmr care cerave skinc...   \n",
+       "1   life love god happy time sofia watching jesus ...   \n",
+       "2   acne scars acne prone prone pimples acne prone...   \n",
+       "3          ich die das nicht und ist mit den auch wie   \n",
+       "4   cavemen water washing morning wash girl mornin...   \n",
+       "5   song jose diego funny david lorenzo arab bruno...   \n",
+       "6   mask clay clay mask sorlest rage masks led mas...   \n",
+       "7   retinol tretinoin week acid tret retinal glyco...   \n",
+       "8   sleep morning smell morning routine routine sl...   \n",
+       "9   comments followers ads moots tiktok follow 250...   \n",
+       "10  pores pore botox pads wrinkles products forehe...   \n",
+       "11  naturium dark serum oil vitamin butter night s...   \n",
+       "12  fungal fungal acne acne acne safe fungal acne ...   \n",
+       "13  anua azelaic acid azelaic acid serum anua azel...   \n",
+       "14  milky milky toner toner byoma milky toner byom...   \n",
        "\n",
-       "                                            Examples          NormName  \\\n",
-       "0  ['Love that headband girl! Love a good skin ca...              love   \n",
-       "1  ['Your skin looks amazing ✨✨✨ what would you r...        acne scars   \n",
-       "2  ['I find it blissful for showering in the even...              hair   \n",
-       "3  ['I have re-fallen in love with the beauty ind...    wearing makeup   \n",
-       "4  ['Is it just me or the beauty of joseon sunscr...         sunscreen   \n",
-       "5  ['Woher bekomme ich das sogar diese größere se...              love   \n",
-       "6  ['Toleriane Purifying Foaming Cleanser every s...  double cleansing   \n",
-       "7  ['The face shop is my fave Korean skincare bra...   korean skincare   \n",
-       "8  ['Yall i swear cavemen probably also did wash ...           cavemen   \n",
-       "9  [\"I always like to know how things smell. But ...  happy mother day   \n",
+       "                                             Examples  \\\n",
+       "0   ['Love that headband girl! Love a good skin ca...   \n",
+       "1   ['I can’t find your video… where you are feeli...   \n",
+       "2   ['miss, Illa, can you recommend a good routine...   \n",
+       "3   ['ich weiß du hast nicht gefragt, aber würde d...   \n",
+       "4   [\"the craziest part to me is like. cavemen had...   \n",
+       "5   ['Hey pookie I just made a edit of you I was a...   \n",
+       "6   ['YOU SHOULD DO HALF UR FACE IN THE DUPES AND ...   \n",
+       "7   ['Personally I wouldn’t use a retinol cream ev...   \n",
+       "8   ['We’re so happy Calmagnesio is part of your b...   \n",
+       "9   [\"you guys in the comments complaing in the co...   \n",
+       "10  ['This pore-minimizing routine looks so effect...   \n",
+       "11  ['Hey Doc , is alpha arbutin serum and tranxam...   \n",
+       "12  ['Is the medicube collagen mask fungal acne sa...   \n",
+       "13  ['I’ve been following ur vids for a while, jus...   \n",
+       "14  ['I love the byoma milky toner and my prequel ...   \n",
        "\n",
-       "   negative_share  neutral_share  positive_share  \n",
-       "0             NaN            NaN             NaN  \n",
-       "1        0.625000       0.171875        0.203125  \n",
-       "2        0.458333       0.187500        0.354167  \n",
-       "3        0.341463       0.170732        0.487805  \n",
-       "4        0.342105       0.289474        0.368421  \n",
-       "5        0.266667       0.233333        0.500000  \n",
-       "6        0.181818       0.227273        0.590909  \n",
-       "7        0.136364       0.227273        0.636364  \n",
-       "8        0.428571       0.428571        0.142857  \n",
-       "9        0.350000       0.200000        0.450000  "
+       "                   NormName  negative_share  neutral_share  positive_share  \n",
+       "0             love products             NaN            NaN             NaN  \n",
+       "1                happy time        0.346154       0.173077        0.480769  \n",
+       "2                acne scars        0.612903       0.209677        0.177419  \n",
+       "3                       NaN        0.226415       0.339623        0.433962  \n",
+       "4                   cavemen        0.588235       0.235294        0.176471  \n",
+       "5               footballers        0.181818       0.181818        0.636364  \n",
+       "6                      mask        0.294118       0.264706        0.441176  \n",
+       "7                   retinol        0.379310       0.448276        0.172414  \n",
+       "8           morning routine        0.517241       0.137931        0.344828  \n",
+       "9              social media        0.310345       0.241379        0.448276  \n",
+       "10                    pores        0.428571       0.285714        0.285714  \n",
+       "11                vitamin c        0.259259       0.518519        0.222222  \n",
+       "12              fungal acne        0.440000       0.280000        0.280000  \n",
+       "13  anua azelaic acid serum        0.130435       0.391304        0.478261  \n",
+       "14              milky toner        0.350000       0.250000        0.400000  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
