--- a/notebooksHannah/EDA_posts_hashtags_exploration.ipynb
+++ b/notebooksHannah/EDA_posts_hashtags_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "22f17527",
    "metadata": {},
    "outputs": [],
@@ -16,13 +16,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2cdb8d12",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'POV: Du hast endlich herausgefunden was deine Haut wirklich braucht um clean und geschmeidig zu sein  #skincare #skincareroutine #skincaretipps #hautpflege #hautpflegetipps #hautprobleme #skin #hormonelleakne #hormonelleakneloswerden #akne #neurodermitis #skintok #Unreinehaut #Unreinehautbekämpfen #fyp #pickel #Unreinheiten #hautpflegeroutine #Skincaretipsforyou'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "data_posts_hashtags_raw = pd.read_csv(\"../data/posts_hashtags_as_array.csv\")\n",
-    "data_posts_hashtags = data_posts_hashtags_raw.drop(columns = ['id'])\n",
+    "data_posts_hashtags_raw = pd.read_csv(\"../data/hashtags_posts.csv\")\n",
+    "data_posts_hashtags = data_posts_hashtags_raw.drop(columns = ['post_id'])\n",
     "data_posts_hashtags['text'][0]"
    ]
   },
@@ -767,7 +778,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "skincare-analysis-pFfgqJ8c-py3.10",
    "language": "python",
    "name": "python3"
   },
@@ -781,7 +792,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
