Creation of Notebooks Ritu

--- a/notebooksRitu/comments_ingredients.ipynb
+++ b/notebooksRitu/comments_ingredients.ipynb
@@ -58,39 +58,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "0b0d7867",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define a mapping of synonyms (EN/DE) to unified ingredient names\n",
-    "ingredient_map = {\n",
-    "    \"hyaluronic acid\": [\"hyaluronic acid\", \"hyaluronsäure\"],\n",
-    "    \"glycerin\": [\"glycerin\"],\n",
-    "    \"panthenol\": [\"panthenol\"],\n",
-    "    \"squalane\": [\"squalane\", \"squalan\"],\n",
-    "    \"aloe vera\": [\"aloe vera\"],\n",
-    "    \"niacinamide\": [\"niacinamide\", \"niacinamid\"],\n",
-    "    \"vitamin c\": [\"vitamin c\"],\n",
-    "    \"alpha arbutin\": [\"alpha arbutin\", \"alpha-arbutin\"],\n",
-    "    \"licorice root\": [\"licorice root\", \"lakritzextrakt\"],\n",
-    "    \"kojic acid\": [\"kojic acid\", \"kojicsäure\"],\n",
-    "    \"retinol\": [\"retinol\"],\n",
-    "    \"peptides\": [\"peptides\", \"peptide\"],\n",
-    "    \"bakuchiol\": [\"bakuchiol\"],\n",
-    "    \"coenzyme q10\": [\"coenzyme q10\", \"coenzym q10\"],\n",
-    "    \"ceramides\": [\"ceramides\", \"ceramide\"],\n",
-    "    \"salicylic acid\": [\"salicylic acid\", \"salicylsäure\"],\n",
-    "    \"glycolic acid\": [\"glycolic acid\", \"glycolsäure\"],\n",
-    "    \"lactic acid\": [\"lactic acid\", \"milchsäure\"],\n",
-    "    \"pha\": [\"pha\"],\n",
-    "    \"benzoyl peroxide\": [\"benzoyl peroxide\", \"benzoylperoxid\"],\n",
-    "    \"centella asiatica\": [\"centella asiatica\", \"tigergras\"],\n",
-    "    \"green tea\": [\"green tea\", \"grüner tee\"],\n",
-    "    \"allantoin\": [\"allantoin\"],\n",
-    "    \"calendula\": [\"calendula\", \"ringelblume\"],\n",
-    "    \"chamomile\": [\"chamomile\", \"kamille\"]\n",
-    "}"
+    "# Define a mapping of synonyms (EN/DE) to unified ingredient names from the file from Peaks & Pies\n",
+    "ingredient_map = pd.read_csv(\"data/Ingredient Mapping.csv\")"
    ]
   },
   {
