--- a/notebooksRitu/kaggle_skincare_dataset.ipynb
+++ b/notebooksRitu/kaggle_skincare_dataset.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a kaggle dataset with the most recent cosmetics products, including several brands that are the potential competitors of the "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
