Cleaned files part 1

--- a/notebooksRitu/profile_posts_analysis.ipynb
+++ b/notebooksRitu/profile_posts_analysis.ipynb
@@ -2,25 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('../data/profile_posts.csv')\n"
+    "df = pd.read_csv('../data/profile_posts.csv')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check if there are any nested columns"
+    "Check if there are any nested columns left"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
     "    return isinstance(column.iloc[0], (list, tuple, dict))\n",
     "\n",
     "nested_columns = [col for col in df.columns if is_nested(df[col])]\n",
-    "nested_columns\n"
+    "nested_columns"
    ]
   },
   {
@@ -22767,13 +22767,6 @@
    ],
    "source": [
     "df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### sfs"
    ]
   }
  ],
