--- a/notebooksHannah/common_words_comments.ipynb
+++ b/notebooksHannah/common_words_comments.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ee5c06c9",
+   "metadata": {},
+   "source": [
+    "## Need to combine with caption ?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "6578d19d",
