--- a/notebooks/test2.ipynb
+++ b/notebooks/test2.ipynb
@@ -644,7 +644,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "skincare-analysis-pFfgqJ8c-py3.10",
+   "display_name": "skincare-analysis-py3.10",
    "language": "python",
    "name": "python3"
   },
