--- a/notebooks/trends2.ipynb
+++ b/notebooks/trends2.ipynb
@@ -2193,7 +2193,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "skincare-analysis-pFfgqJ8c-py3.10",
+   "display_name": "skincare-analysis-py3.10",
    "language": "python",
    "name": "python3"
   },
