Final Code of Ritu Notebooks

--- a/notebooksRitu/hashtags_deepdive.ipynb
+++ b/notebooksRitu/hashtags_deepdive.ipynb
@@ -1415,6 +1415,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# WordCloud"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1525,7 +1532,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Co-occurance"
+    "#Co-occurance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hashtag Co-Occurrence and Cluster Analysis\n",
+    "\n",
+    "To identify which hashtags tend to perform well **in combination**, we analyzed co-occurrence patterns from TikTok posts over the last 6 months.\n",
+    "\n",
+    "### Methodology\n",
+    "- Extracted all hashtags used per post and created all 2-combinations (pairs).\n",
+    "- Counted how frequently each pair occurred across different posts.\n",
+    "- Built a **hashtag network graph**, where:\n",
+    "  - Nodes = hashtags\n",
+    "  - Edges = co-occurrence frequency\n",
+    "- Applied **greedy modularity clustering** to find thematic groups of hashtags.\n",
+    "\n",
+    "### Output\n",
+    "- Identified the most connected hashtags (used with many others).\n",
+    "- Visualized the hashtag network for discovery.\n",
+    "- Extracted thematic clusters like:\n",
+    "  - `['skincare', 'spf', 'glassskin', ...]`\n",
+    "  - `['grwm', 'makeup', 'outfitoftheday', ...]`\n",
+    "\n",
+    "### Use Case\n",
+    "These clusters help creators:\n",
+    "- Choose **complementary hashtags** that amplify reach.\n",
+    "- Discover **micro-niche communities**.\n",
+    "- Build strategic hashtag bundles that appear authentic and relevant.\n",
+    "\n",
+    "### Limitations of Co-Occurrence and Clustering\n",
+    "\n",
+    "1. **No Causality**: Co-occurrence ≠ effectiveness. Just because hashtags are used together doesn't mean they boost engagement.\n",
+    "2. **Overrepresentation of Generic Tags**: Tags like `#fyp`, `#viral`, or `#tiktok` dominate co-occurrence but may add little niche insight.\n",
+    "3. **Sensitive to Volume**: Clustering may reflect high-frequency patterns but not necessarily topical consistency.\n",
+    "4. **Temporal Bias**: Short-term trends or viral moments can distort true long-term co-occurrence relationships.\n",
+    "5. **Emerging Hashtags Excluded**: New or low-frequency hashtags may not appear in clusters due to lack of data.\n",
+    "\n",
+    "💡 **Tip**: Use co-occurrence results as *suggestive*, not definitive. Combine with trend metrics or engagement scores for strategic hashtag selection.\n"
    ]
   },
   {
@@ -2031,6 +2078,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Predicting TikTok Hashtag Engagement using Machine Learning\n",
+    "\n",
+    "We built logistic regression models to predict whether a TikTok post will receive **above-median engagement** based on:\n",
+    "\n",
+    "- **Hashtags used**\n",
+    "- **Caption text**\n",
+    "- **Play count / Like count**\n",
+    "- **Posting time (hour, day of week)**\n",
+    "- **Hashtag popularity (frequency)**\n",
+    "\n",
+    "Two versions of the model were tested:\n",
+    "- One with `diggCount` as a numeric predictor.\n",
+    "- One using `playCount` and `avg_hashtag_popularity`.\n",
+    "\n",
+    "### Feature Engineering\n",
+    "- Hashtags and captions were vectorized using `CountVectorizer`.\n",
+    "- Time was decomposed into hour and weekday.\n",
+    "- A new feature, `avg_hashtag_popularity`, was calculated by counting how often each hashtag appears.\n",
+    "\n",
+    "### Model Performance\n",
+    "The final model achieved the following classification metrics:\n",
+    "\n",
+    "### Interpretability\n",
+    "- Hashtag features had the highest cumulative importance.\n",
+    "- Captions contributed ~20–30% of the model’s decisions.\n",
+    "- Numeric features like play count and time were consistently positive signals.\n",
+    "\n",
+    "### Custom Prediction Tool\n",
+    "A `predict_post_success()` function allows testing custom hashtag/caption/time inputs to estimate the likelihood of high engagement. It also highlights which hashtags had the most positive or negative impact on the prediction.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### With diggCount and enagement "
    ]
   },
@@ -2471,12 +2553,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "| Metric                  || What it Means                                        \n",
-    "| ----------------------- || ---------------------------------------------------- \n",
-    "|   Accuracy              || Our model correctly predicted **79%** of the posts. \n",
-    "|   Precision (class 1)   || of posts predicted to go viral actually did.  \n",
-    "|   Recall (class 1)      || It caught 76% of all actual high-engagement posts.   \n",
-    "|   F1-score (class 1)    || Balanced metric — high means good generalization.    \n"
+    "| **Metric**              | **Description**                                                 |\n",
+    "|-------------------------|-----------------------------------------------------------------|\n",
+    "| **Accuracy**            | The model correctly predicted **79%** of all posts overall.     |\n",
+    "| **Precision (Class 1)** | Of the posts predicted to go viral, this is how many actually did. |\n",
+    "| **Recall (Class 1)**    | The model caught **76%** of all actual high-engagement posts.   |\n",
+    "| **F1-score (Class 1)**  | Harmonic mean of precision and recall — measures generalization.|\n"
    ]
   },
   {
@@ -3458,13 +3540,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Comments hashtags "
-   ]
   },
   {
    "cell_type": "markdown",
