--- a/notebooksRitu/kaggle_skincare_dataset.ipynb
+++ b/notebooksRitu/kaggle_skincare_dataset.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Kaggle Dataset "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This is a kaggle dataset with the most recent cosmetics products, including several brands that are the potential competitors of the "
    ]
   },
