Addition of Notebooks from Ritu

--- a/notebooks/notebooksRitu/kaggle_skincare_dataset.ipynb
+++ b/notebooks/notebooksRitu/kaggle_skincare_dataset.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Kaggle Dataset "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a kaggle dataset with the most recent cosmetics products, including several brands that are the potential competitors of the "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -50,15 +64,6 @@
     "path = kagglehub.dataset_download(\"waqi786/most-used-beauty-cosmetics-products-in-the-world\")\n",
     "\n",
     "print(\"Path to dataset files:\", path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "###"
    ]
   }
  ],
