--- a/notebooks/comments_sentiment_analysis.ipynb
+++ b/notebooks/comments_sentiment_analysis.ipynb
@@ -2701,11 +2701,41 @@
     "    window=3  # 3-week smoothing\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6be75dc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-07-10 11:41:04+00:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"/Users/ritushetkar/env_capstone/data/filtered_data/posts_transcripts.csv\")\n",
+    "df['createTimeISO'] = pd.to_datetime(df['createTimeISO'])\n",
+    "print(df['createTimeISO'].max())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65254dcb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "skincare-analysis-pFfgqJ8c-py3.10",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
